# Ros2_gazebo

./: .gitignore  README.md
gazebo_apriltag/: generate.py
gazebo_apriltag/models/Apriltag36_11_00001/: model.sdf
gazebo_apriltag/models/Apriltag36_11_00003/: model.sdf
gazebo_apriltag/models/Apriltag36_11_00004/: model.sdf
joy_controller/: package.xml  setup.py
joy_controller/joy_controller/: joy_controller_node.py
l2i_fusion_detection/: CMakeLists.txt  README.md  package.xml
l2i_fusion_detection/launch/: lidar_fusion_detection.launch (copy).py  lidar_fusion_detection.launch.py
l2i_fusion_detection/rviz/: l2i.rviz
l2i_fusion_detection/src/: lidar_camera_fusion_with_detection.cpp
my_agv2/: CMakeLists.txt  demo.sh
my_agv2/examples/: agv_lift.cpp  agv_unload.cpp  example_position.cpp
my_agv2/launch/: agv5_demo.launch.py
my_agv2/local_models/AGV5/: AGV5 (copy).sdf  AGV5_from4.sdf  model.config  package.xml
my_agv2/local_models/AGV5/config/: joint_names_AGV5.yaml
my_agv2/local_models/AGV5/launch/: display.launch
my_agv2/local_models/AGV5/meshes/: CW_brac_lr.STL  CW_rr.STL  bot_slider_l.STL  bot_slider_r.STL  sci_bot_l.STL  sci_r_A.STL  sci_r_B.STL  top_fixed_l_A.STL  top_slider_l.STL  top_slider_mount_r.STL  virtual_base_r.STL  virtual_sci_r_1.STL  virtual_sci_r_2.STL
my_agv2/local_models/AGV5/urdf/: AGV5.urdf
my_agv2/local_models/Totes/: CMakeLists.txt  model.config
my_agv2/local_models/Totes/launch/: display.launch  gazebo.launch
my_agv2/local_models/Totes/meshes/: base_link.STL  box3.STL
my_agv2/local_models/Totes/urdf/: Totes.urdf
my_agv2/local_models/my_ground_plane/: model.config
my_agv2/local_models/my_ground_plane/materials/scripts/: my_ground_plane.material
my_agv2/local_models/shelf_final/: CMakeLists.txt  shelf.sdf  shelf_final.urdf
my_agv2/local_models/shelf_final/launch/: gazebo.launch
my_agv2/local_models/shelf_final/meshes/: carriage.STL  roof_rack.STL  roof_rack2.STL  trolley.STL
my_agv2/local_models/shelf_final/urdf/: shelf_final.csv
my_agv2/meshes/: CW_brac_rf.STL  CW_mount_lf.STL  CW_mount_rf.STL  CW_mount_rr.STL  bot_slider_l.STL
my_agv2/urdf/: AGV5.xacro (copy).urdf
my_agv2/world/: catalyst_env_v2.world  catalyst_env_v3.world  test.world  test_1.world
ros2_ws2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws2/log/: latest_build
ros2_ws2/src/: Readme.txt
ros2_ws2/src/agv_control_pkg/: package.xml  setup.cfg  setup.py
ros2_ws2/src/agv_control_pkg/agv_control_pkg/: agv_controller.py  april_tag_detection.py  line_detection_node.py  line_detection_test.py  math_test.py  tag_detection_node.py  tag_detection_node_old.py  test_camera.py  tf_broadcaster_node.py
ros2_ws2/src/my_agv2/: msg.txt  package.xml
ros2_ws2/src/my_agv2/launch/: agv5_demo.launch.py  agv5_demo_with_JC.launch.py  agv_trac_pos.launch.py  agv_velocity.launch.py  agv_world.launch.py
ros2_ws2/src/my_agv2/local_models/AGV5/: AGV5.sdf  AGV5_body_in_white.sdf  CMakeLists.txt
ros2_ws2/src/my_agv2/local_models/AGV5/launch/: gazebo.launch
ros2_ws2/src/my_agv2/local_models/AGV5/meshes/: CW_lr.STL  TM_base.STL  TM_loader.STL  sci_l_A.STL  sci_l_B.STL  top_fixed_l_B.STL  top_fixed_mount_r.STL  top_slider_l_A.STL  top_slider_l_B.STL  top_slider_r.STL  virtual_sci_l_1.STL
ros2_ws2/src/my_agv2/local_models/AGV5/urdf/: AGV5.csv
ros2_ws2/src/my_agv2/local_models/Totes/: package.xml  totes.sdf
ros2_ws2/src/my_agv2/local_models/Totes/urdf/: Totes.csv
ros2_ws2/src/my_agv2/local_models/my_ground_plane/: model (copy).sdf  model.sdf
ros2_ws2/src/my_agv2/local_models/my_ground_plane/meshes/: chessboard.dae
ros2_ws2/src/my_agv2/local_models/shelf_final/: model.config  package.xml
ros2_ws2/src/my_agv2/local_models/shelf_final/config/: joint_names_shelf_final.yaml
ros2_ws2/src/my_agv2/local_models/shelf_final/launch/: display.launch
ros2_ws2/src/my_agv2/local_models/shelf_final/meshes/: R02_2.STL  bank1.STL  bank2.STL  bank3.STL  bank4.STL  base_link.STL  part7_1.STL  part7_2.STL  ss_1.STL  ss_2.STL  traction1.STL  traction2.STL
ros2_ws2/src/my_agv2/log/: latest_build
ros2_ws2/src/my_agv2/meshes/: CW_brac_rr.STL  CW_mount_lr.STL  CW_rf.STL  bot_slider_r.STL  sci_bot_l.STL  sci_l_A.STL  sci_l_B.STL  virtual_base_l.STL
ros2_ws2/src/my_agv2/rviz/: show_camera.rviz
ros2_ws2/src/my_agv2/urdf/: AGV3_single.csv  AGV3_single.xacro.urdf  AGV3_single_trac_pos.xacro.urdf  AGV3_single_vel.xacro.urdf  AGV5.xacro (copy).urdf  AGV5.xacro.urdf  AGV6.xacro (copy).urdf  AGV6.xacro.urdf
ros2_ws2/src/my_agv2/world/: catalyst_env_v2.world  test (copy).world
ros2_ws_test/src/agv_controller/: package.xml  setup.py
ros2_ws_test/src/agv_controller/agv_controller/: agv_controller.py  agv_controller2.py
ros2_ws_test/src/agv_controller/launch/: launch_demo.launch.py
ros2_ws_test/src/agv_msgs/: CMakeLists.txt  package.xml
ros2_ws_test/src/agv_msgs/msg/: AgvMasterMsg.msg  HardwareFeedback.msg  LogicToHardware.msg
ros2_ws_test/src/ap_tag_locator/: package.xml  setup.cfg  setup.py
ros2_ws_test/src/ap_tag_locator/ap_tag_locator/: ap_tag_locator.py
ros2_ws_test/src/aptag_detection/: package.xml  setup.cfg  setup.py
ros2_ws_test/src/aptag_detection/aptag_detection/: april_tag_detection.py  pose_to_marker_node.py  tag_detection_node.py  tf_broadcaster_node.py
ros2_ws_test/src/aptag_detection/rviz_config/: aptag_detection.rviz
ros2_ws_test/src/can_msgs/: CMakeLists.txt  package.xml
ros2_ws_test/src/can_node/: Orion_CANBUS_ARROW.dbc  package.xml  setup.py
ros2_ws_test/src/can_node/can_node/: can.py
ros2_ws_test/src/hardware_control/: package.xml  setup.cfg  setup.py
ros2_ws_test/src/hardware_control/hardware_control/: hardware_control.py
ros2_ws_test/src/lidar_detection/: package.xml  setup.py
ros2_ws_test/src/lidar_detection/lidar_detection/: lidar_detection.py
ros2_ws_test/src/main_logic/: package.xml  setup.cfg  setup.py
ros2_ws_test/src/main_logic/main_logic/: main_logic.py
ros2_ws_test/src/ros2socketcan_bridge/: CMakeLists.txt  package.xml
yolo_ros/yolo_bringup/launch/: yolo.launch.py
(+67 files in other folders)
